try another image

--- a/_posts/2020-05-29-UMAP.md
+++ b/_posts/2020-05-29-UMAP.md
@@ -5,5 +5,5 @@ transition: slide
 ---
 
 <section data-markdown>
-![](/assets/img/umap_slides/umap_slides_1.png)
+<img data-src="/assets/img/umap_slides/umap_slides_1.png"/>
 </section>
