--- a/_posts/2020-05-29-UMAP.md
+++ b/_posts/2020-05-29-UMAP.md
@@ -5,5 +5,10 @@ transition: slide
 ---
 
 <section data-markdown>
-<img data-src="/assets/img/umap_slides/umap_slides_1.png"/>
+  <textarea data-template>
+    ## Slide 1
+    <img data-src="/assets/img/umap_slides/umap_slides_1.png"/>
+    ---
+    ## Slide 2
+  </textarea>
 </section>
