--- a/_posts/2020-05-29-UMAP.md
+++ b/_posts/2020-05-29-UMAP.md
@@ -7,7 +7,7 @@ transition: slide
 <section data-markdown>
   <textarea data-template>
     ## Slide 1
-    <img data-src="/assets/img/umap_slides/umap_slides_1.png"/>
+    <img data-src="./images/umap_slides_1.png" height="100" width="200">
     ---
     ## Slide 2
   </textarea>
