add iframe slides

--- a/_posts/2020-05-29-UMAP.md
+++ b/_posts/2020-05-29-UMAP.md
@@ -1,14 +1,8 @@
 ---
-layout: slide
-title: Semi-supervised manifold learning and other dimension reduction approaches in single-cell data
-transition: slide
+title: "Semi-supervised manifold learning and other dimension reduction approaches in single-cell data"
+description: Developing slides for DR techniques
+date: 2020-05-29
+layout: pdf
 ---
 
-<section data-markdown>
-  <textarea data-template>
-    ## Slide 1
-    <img data-src="./images/umap_slides_1.png" height="100" width="200">
-    ---
-    ## Slide 2
-  </textarea>
-</section>
+<iframe src="https://drive.google.com/file/d/1S2XOdx_EPGQ3iYltwPLAOSQKKl0PPaoa/view" width="100%" height="100%"></iframe>
