--- a/_posts/2020-05-29-UMAP.md
+++ b/_posts/2020-05-29-UMAP.md
@@ -5,4 +5,8 @@ date: 2020-05-29
 layout: pdf
 ---
 
-<iframe src="https://drive.google.com/file/d/1S2XOdx_EPGQ3iYltwPLAOSQKKl0PPaoa/preview" width="800" height="800"></iframe>
+## Introductory (and in development) slides surround semi-supervised manifold learning with UMAP
+
+Download the slides as [powerpoint]("blah") or as a [pdf]("https://drive.google.com/file/d/1S2XOdx_EPGQ3iYltwPLAOSQKKl0PPaoa/view?usp=sharing")
+
+<iframe src="/pdf/umap_slides.pdf" width="100%" height="800rem"></iframe>
