--- a/_posts/2020-05-29-UMAP.md
+++ b/_posts/2020-05-29-UMAP.md
@@ -7,6 +7,6 @@ layout: post
 
 ## Introductory (and in development) slides surround semi-supervised manifold learning with UMAP
 
-Download the slides as [powerpoint]("https://www.dropbox.com/sh/wowzy993uo2br0f/AACJq3cT-kG4wYlHFfjYRfzoa?dl=0") or as a [pdf]("https://www.dropbox.com/sh/wowzy993uo2br0f/AACJq3cT-kG4wYlHFfjYRfzoa?dl=0")
+Download the slides as [powerpoint](https://www.dropbox.com/sh/wowzy993uo2br0f/AACJq3cT-kG4wYlHFfjYRfzoa?dl=0) or as a [pdf](https://www.dropbox.com/sh/wowzy993uo2br0f/AACJq3cT-kG4wYlHFfjYRfzoa?dl=0)
 
 <iframe src="/pdf/umap_slides.pdf" width="100%" height="800rem"></iframe>
